Adding details of the organisation to a single model: gcsja

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,9 @@ en:
   actions: Actions
   are_you_sure: Are you sure?
   home: Home
+  nav:
+    about: About
+    welcome: welcome
   practices:
     index:
       title: Classes
