Added haml syntax validation for Gcsja model.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,6 +73,13 @@ en:
     attributes:
       event:
         lng: ''
+      gcsja:
+        about: About
+        welcome: Welcome
+    errors:
+      messages:
+        gcsja:
+          invalid_record: Oops!
 #Validation messages
   validations:
     event:
