Embedded Youtube videos working.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,9 @@ en:
     edit:
       title: Editing
   successfully_updated: Successfully updated your record.
+  videos:
+    index:
+      title: Videos
   nav:
     about: About 
     home: Home
