--- a/config/locales/br.yml
+++ b/config/locales/br.yml
@@ -31,7 +31,7 @@ br:
   home: "Página inicial"
   submit: Enviar
 #XXX- this is gross but fast. Fix it soon.
-  youtube_text: "Para outros vídeos com Mestre Jogo de Dentro, o Grupo de CapoeiraAngola Jogo de Semente fazer, e vários, por favor visitor nosso canal no <a href='www.youtube.com/user/stephensam'>YouTube</a>."
+  youtube_text: "Para outros vídeos com Mestre Jogo de Dentro, o Grupo de CapoeiraAngola Jogo de Semente fazer, e vários, por favor visitor nosso canal no <a href='http://www.youtube.com/user/stephensam'>YouTube</a>."
 
 
   gcsja:
