--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,7 +29,7 @@ en:
   home: Home
   submit: Submit
   #XXX - Gross but fast. Fix it soon.
-  youtube_text: "Please visit our <a href='www.youtube.com/user/stephensam'>YouTube channel</a> for more videos with Mestre Jogo de Dentro, Grupo de Capoeira Semente do Jogo de Angola and other related capoeira angola videos."
+  youtube_text: "Please visit our <a href='http://www.youtube.com/user/stephensam'>YouTube channel</a> for more videos with Mestre Jogo de Dentro, Grupo de Capoeira Semente do Jogo de Angola and other related capoeira angola videos."
   save_changes: "Save changes"
   gcsja:
     edit:
