--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -29,7 +29,7 @@ fr:
   home: Accueil
   submit: Soumettre
   #XXX - gross but fast. Fix it soon.
-  youtube_text: "Pour d’autres vidéos avec Mestre Jogo de Dentro, le Grupo de Capoeira Semente do Jogo de Angola, et divers, veuillez bien visiter notre chaîne <a href='www.youtube.com/user/stephensam'>YouTube</a>."
+  youtube_text: "Pour d’autres vidéos avec Mestre Jogo de Dentro, le Grupo de Capoeira Semente do Jogo de Angola, et divers, veuillez bien visiter notre chaîne <a href='http://www.youtube.com/user/stephensam'>YouTube</a>."
 
   gcsja:
     edit:
