fixed create action redirect
Now redirecting to /locale/pagetitle

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,6 +63,8 @@ en:
   pages:
     new:
       new: "Add a new page"
+    create:
+      success: "This page has been saved successfully."
   locations:
     index:
       title: Locations
