--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,6 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 #
 en:
-  delete: "Delete"
   sign_in_with: "Sign in using your existing account with one of the following:"
   application:
     title: Capoeira Angola Ottawa
@@ -24,6 +23,7 @@ en:
   back: Back
   show: Show
   edit: Edit
+  new: "New"
   destroy: Delete
   actions: Actions
   are_you_sure: Are you sure?
